设计了数据库,增加了模块的框架和相应的实体类

--- a/projectTemplate/documents/接口文档.MD
+++ b/projectTemplate/documents/接口文档.MD
@@ -94,9 +94,34 @@
 ```json
 {
   "code": 200,
-  "message": "操作成功",
+  "msg": "操作成功",
   "data": {
-    "SecurityUserDTO": null
+    "loginUserForm": {
+      "id": 1,
+      "username": "wddyxd",
+      "password": "202cb962ac59075b964b07152d234b70",
+      "phone": "15626448742",
+      "phoneCode": null,
+      "email": "www778005729@qq.com",
+      "emailCode": null,
+      "loginType": null,
+      "client": null
+    },
+    "currentUserInfo": {
+      "id": 1,
+      "username": "wddyxd",
+      "nickName": "wddyxd",
+      "avatar": "",
+      "roles": [
+        "ROLE_SUPER_ADMIN"
+      ],
+      "permissionValueList": [
+        "user.add",
+        "user.update",
+        "user.list",
+        "user.remove"
+      ]
+    }
   }
 }
 ```
