设计了数据库,增加了模块的框架和相应的实体类

--- a/projectTemplate/documents/接口文档.MD
+++ b/projectTemplate/documents/接口文档.MD
@@ -129,7 +129,7 @@
 - **接口名称**: 用户登录
 - **接口路径**: `/api/user/auth/logout`
 - **请求方法**: POST
-- **接口权限**:任何用户在登录后可访问
+- **接口权限**:任何已登录用户可访问
 - **接口描述**: 按下登出按钮后触发,然后删除redis中的token信息
 - **接口实现**:在TokenLogoutHandler删除redis中的token信息然后返回空结果
 ##### 请求参数
@@ -148,6 +148,192 @@
 ##### 响应数据
 ###### 响应状态码
 - 200: 请求成功
+- 500: 服务器错误
+
+###### 响应体
+```json
+{
+  "code": 200,
+  "message": "操作成功",
+  "data": null
+}
+```
+
+#### 获取手机验证码接口
+##### 基础信息
+- **接口名称**: 获取手机验证码
+- **接口路径**: `/api/user/auth/phoneCode`
+- **请求方法**: POST
+- **接口权限**:任何用户可访问
+- **接口描述**: 获取手机验证码接口,前端设置用户60秒访问一次
+- **接口实现**:- 获取手机号,判断合法性后发送手机验证码,同时要根据手机号对接口进行基于 Redis 的计数器限流,
+- 可以用短信服务商 API 将验证码发送给用户,但这里简化为后端生成并打印随机验证码,
+- 同一手机号在验证码有效期内重复请求，可直接返回成功(幂等性问题),
+- 验证码保存在redis中,过期时间为5分钟
+##### 请求参数
+###### 请求头
+| 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
+|--------------|------|--------|-------|-----------------------------------------|
+| Content-Type | 是    | string | 请求体类型 | application/json                        |
+
+###### 请求体
+| 参数名              | 是否必填                    | 数据类型   | 说明       | 示例                   |
+|------------------|-------------------------|--------|----------|----------------------|
+| phone            | 是                       | string | 手机号      | 15626448742          |
+
+##### 响应数据
+###### 响应状态码
+- 200: 请求成功
+- 400: 请求参数错误
+- 500: 服务器错误
+
+###### 响应体
+```json
+{
+  "code": 200,
+  "message": "操作成功",
+  "data": null
+}
+```
+
+#### 获取邮箱验证码接口
+##### 基础信息
+- **接口名称**: 获取邮箱验证码
+- **接口路径**: `/api/user/auth/emailCode`
+- **请求方法**: POST
+- **接口权限**:任何用户可访问
+- **接口描述**: 获取邮箱验证码接口,前端设置用户60秒访问一次
+- **接口实现**:- 获取邮箱,判断合法性后发送邮箱验证码,同时要根据邮箱对接口进行基于 Redis 的计数器限流,
+- 可以用第三方邮箱服务商将验证码发送给用户,但这里简化为编写邮箱发送工具类,根据SMTP协议发送验证码,
+- 同一邮箱在验证码有效期内重复请求，可直接返回成功(幂等性问题),
+- 验证码保存在redis中,过期时间为5分钟
+##### 请求参数
+###### 请求头
+| 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
+|--------------|------|--------|-------|-----------------------------------------|
+| Content-Type | 是    | string | 请求体类型 | application/json                        |
+
+###### 请求体
+| 参数名   | 是否必填 | 数据类型   | 说明 | 示例                 |
+|-------|------|--------|----|--------------------|
+| email | 是    | string | 邮箱 | 15626448742@qq.com |
+
+##### 响应数据
+###### 响应状态码
+- 200: 请求成功
+- 400: 请求参数错误
+- 500: 服务器错误
+
+###### 响应体
+```json
+{
+  "code": 200,
+  "message": "操作成功",
+  "data": null
+}
+```
+
+
+- (注册业务备注: 如果用户先成为了管理者就只能让超级管理者手动分配该管理者为其他角色,
+- 如果之前不存在注册表单描述的用户将会在检测账号合法性后添加账号,并根据注册的客户端分配不同角色,
+- 如果注册时发现表单描述的账户有另一个客户端的角色则额外分配另一个角色
+- 如果已存在的用户不是管理者但需要成为管理者则需要超级管理员分配该用户为管理者)
+#### 用户端用户注册接口
+##### 基础信息
+- **接口名称**: 用户注册
+- **接口路径**: `/api/user/auth/customUserRegister`
+- **请求方法**: POST
+- **接口权限**:任何用户可访问
+- **接口描述**: 用户端的注册接口,
+- 需要判断用户名,手机号或邮箱是否已存在,如果都为null则注册成功,
+- 然后分配ROLE_NEW_USER角色,创建user表,关联user_role表,创建user_detail表,
+- 如果存在不指向同一个用户的情况则返回错误,
+- 如果指向同一个用户则判断有没有购物者相关角色,如果有则返回错误,否则分配ROLE_NEW_USER角色
+- **接口实现**:得到参数后分别根据用户名,手机号和邮箱获取user表的一条数据,
+- 如果三份数据都是null则注册用户,分配ROLE_NEW_USER角色,创建user表,关联user_role表,创建user_detail表并填充默认数据
+- 如果三份数据都指向同一个用户而且没有被分配购物者相关角色则将该用户分配ROLE_NEW_USER角色,
+- 其他情况返回错误
+- 其中,用加密算法(这里用MD5)加密密码,同时将事先存储到redis的phoneCode和emailCode提取来验证手机和邮箱的有效性
+##### 请求参数
+###### 请求头
+| 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
+|--------------|------|--------|-------|-----------------------------------------|
+| Content-Type | 是    | string | 请求体类型 | application/json                        |
+
+###### 请求体
+| 参数名              | 是否必填                    | 数据类型   | 说明       | 示例                   |
+|------------------|-------------------------|--------|----------|----------------------|
+| username         | 是                       | string | 用户名      | wddyxd               |
+| phone            | 是                       | string | 手机号      | 15626448742          |
+| phoneCode        | 是                       | string | 手机验证码    | 123456               |
+| email            | 是                       | string | 邮箱       | 15626448742@qq.com   |
+| emailCode        | 是                       | string | 邮箱验证码    | 123456               |
+| password         | 是                       | string | 密码       | 123456               |
+
+##### 响应数据
+###### 响应状态码
+- 200: 请求成功
+- 400: 请求参数错误
+- 40?: 用户已存在
+- 40?: 手机验证码错误
+- 40?: 邮箱验证码错误
+- 500: 服务器错误
+
+###### 响应体
+```json
+{
+  "code": 200,
+  "message": "操作成功",
+  "data": null
+}
+```
+
+#### 商户端商户注册接口
+##### 基础信息
+- **接口名称**: 商户端商户注册
+- **接口路径**: `/api/user/auth/merchantRegister`
+- **请求方法**: POST
+- **接口权限**:任何用户可访问
+- **接口描述**: 商户端的注册接口,
+- 要判断用户名,手机号或邮箱是否已存在,如果都为null则注册成功,
+- 然后分配ROLE_NEW_MERCHANT角色,创建user表,关联user_role表,创建user_detail表,创建merchant_supplement表
+- 如果存在不指向同一个用户的情况则返回错误,
+- 如果指向同一个用户则判断有没有商户相关角色,如果有则返回错误,否则分配ROLE_NEW_MERCHANT角色
+- **接口实现**:得到参数后分别根据用户名,手机号和邮箱获取user表的一条数据,
+- 如果三份数据都是null则注册用户,分配ROLE_NEW_MERCHANT角色,创建user表,关联user_role表,创建user_detail表,创建merchant_supplement表并填充默认数据
+- 如果三份数据都指向同一个用户而且没有被分配商户相关角色则将该用户分配ROLE_NEW_MERCHANT角色,
+- 其他情况返回错误
+- 其中,用加密算法(这里用MD5)加密密码,同时将事先存储到redis的phoneCode和emailCode提取来验证手机和邮箱的有效性
+##### 请求参数
+###### 请求头
+| 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
+|--------------|------|--------|-------|-----------------------------------------|
+| Content-Type | 是    | string | 请求体类型 | application/json                        |
+
+###### 请求体
+| 参数名              | 是否必填 | 数据类型    | 说明       | 示例                   |
+|------------------|------|---------|----------|----------------------|
+| username         | 是    | string  | 用户名      | wddyxd               |
+| phone            | 是    | string  | 手机号      | 15626448742          |
+| phoneCode        | 是    | string  | 手机验证码    | 123456               |
+| email            | 是    | string  | 邮箱       | 15626448742@qq.com   |
+| emailCode        | 是    | string  | 邮箱验证码    | 123456               |
+| password         | 是    | string  | 密码       | 123456               |
+| shopName         | 是    | string  | 商户名      | 广文书店                 |
+| shopCategoryId   | 是    | Integer | 商户类别id   | 1                    |
+| shopAddress      | 是    | string  | 商户地址     | 广东汕头濠江区达濠街道西元大盘1010号 |
+| shopLicense      | 是    | string  | 商户营业执照   | 123456               |
+| shopLicenseImage | 是    | string  | 商户营业执照图片 | 123456               |
+
+
+
+##### 响应数据
+###### 响应状态码
+- 200: 请求成功
+- 400: 请求参数错误
+- 40?: 用户已存在
+- 40?: 手机验证码错误
+- 40?: 邮箱验证码错误
 - 500: 服务器错误
 
 ###### 响应体
@@ -401,6 +587,41 @@
 | createdTime | 否(默认为当前时间)      | Date    | 创建时间 | 2025-10-21T12:17:56.000+00:00 |
 | updatedTime | 否(默认为当前时间)      | Date    | 修改时间 | 2025-10-21T12:17:56.000+00:00 |
 
+
+##### 响应数据
+###### 响应状态码
+- 200: 请求成功
+- 400: 请求参数错误
+- 500: 服务器错误
+
+###### 响应体
+```json
+{
+  "code": 200,
+  "msg": "操作成功",
+  "data":null
+}
+```
+
+#### 通用更新用户信息接口
+##### 基础信息
+- **接口名称**: 更新用户信息
+- **接口路径**: `/api/user/user/customUpdate`
+- **请求方法**: POST
+- **接口权限**: 需要user.update权限或更新者的id等于参数id
+- **接口描述**: 实现了对单个用户的user表,user_detail表,merchant_supplement表的单条或单条字段的数据的更新,但更新某些字段需要验证参数
+- **接口实现**: 
+##### 请求参数
+###### 请求头
+| 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
+|--------------|------|--------|-------|-----------------------------------------|
+| Content-Type | 是    | string | 请求体类型 | application/json                        |
+| token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
+
+###### 请求体
+| 参数名         | 是否必填            | 数据类型    | 说明   | 示例                            |
+|-------------|-----------------|---------|------|-------------------------------|
+| id          | 否               | Long    | id   | none                          |
 
 ##### 响应数据
 ###### 响应状态码
