设计了数据库,增加了模块的框架和相应的实体类

--- a/projectTemplate/documents/接口文档.MD
+++ b/projectTemplate/documents/接口文档.MD
@@ -652,13 +652,13 @@
 - **接口权限**: 需要user.update权限或更新者的id等于参数id
 - **接口描述**: 实现了对单个用户的user表,user_detail表,merchant_supplement表的单条或关联字段数据的更新,但更新某些字段需要验证码
 - **接口实现**:
-- 首先要明确,敏感字段需要手机验证码,而敏感字段包括password,phone,email,shopLicense和shopLicenseImage,其他字段不需要验证码,
-- 然后updateType包括:PHONE,EMAIL,PASSWORD,LICENSE(需要同时修改shopLicense和shopLicenseImage),CARD(需要同时修改realName,IdCard),
+- 首先要明确,敏感字段需要手机验证码,而敏感字段包括password,phone,email,其他字段不需要验证码,
+- 然后updateType包括:PHONE,EMAIL,PASSWORD,CARD(需要同时修改realName,IdCard),
 - SHOP(需要同时修改shopName,shopCategoryId和shopAddress),NICKNAME,AVATAR,GENDER,REGION.
-- 根据传入的用户id来查询user,user_detail,merchant_supplement表,然后根据updateType执行对应的更新逻辑,
+- 根据传入的用户id来查询user,user_detail表,然后根据updateType执行对应的更新逻辑,
 - 特别注意,如果updateType=CARD则只需判定身份证格式是否合法并且没有被其他用户占用后在数据库更新is_id_card_verified字段
 - 后台的用户管理模块不提供更新敏感字段的按钮,更新敏感字段的按钮仅对本人开放
-- 对于敏感字段,PHONE和EMAIL在数据库有唯一性约束,但密码和许可证没有,所以应该在redis记录上次修改密码或许可证的时间戳,有效期5秒,有效期内禁止修改
+- 对于敏感字段,PHONE和EMAIL在数据库有唯一性约束,但密码没有,所以应该在redis记录上次修改密码的时间戳,有效期5秒,有效期内禁止修改
 - username字段不参与字段更新
 ##### 请求参数
 ###### 请求头
@@ -684,11 +684,6 @@
 | birthday         | 否         | Date    | 生日     | 2005-10-21T12:17:56.000+00:00 |
 | region           | 否         | String  | 地区     | 上海                            |
 | idCard           | 否         | String  | 身份证号   | 123456789012345678            |
-| shopName         | 否         | String  | 店铺名称   | 广文书店                          |
-| shopCategoryId   | 否         | String  | 店铺类别   | 美食                            |
-| shopAddress      | 否         | String  | 店铺地址   | 汕头达濠西元大盘1010号                 |
-| shopLicense      | 否         | String  | 营业执照   | xxx                           |
-| shopLicenseImage | 否         | String  | 营业执照图片 | xxx                           |
 
 ##### 响应数据
 ###### 响应状态码
@@ -713,8 +708,57 @@
 - **接口权限**:需要user.delete权限
 - **接口描述**: 只有管理员有权限删除用户,普通用户要注销需要将注销请求发送给管理员
 - **接口实现**:- 在删除账户之前在redis查看上次删除该用户的时间戳如果存在则直接返回,
-- 否则要须保证该该账户存在且该账户不存在状态为已付款,待发货,待收货的订单,然后调用商户端的删除商户接口,然后将用户的充值和领取的优惠券退还,
+- 否则要须保证该该账户存在且该账户不存在状态为已付款,待发货,待收货的订单,然后保证该用户没有注册商户,然后将用户的充值和领取的优惠券退还,
 - 然后将唯一约束字段(都是varchar字段)修改成 "用户ID+DELETED+删除时间戳:原先字段"的格式,然后将user,user_detail,user_address表的相关字段逻辑删除
+- 然后将用户和用户相关角色的关联逻辑删除
+- 然后在redis添加本次删除的时间戳,然后返回被删除用户的id
+- **接口备注**:删除接口需要引入MQ和seata和状态机
+##### 请求参数
+###### 请求头
+| 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
+|--------------|------|--------|-------|-----------------------------------------|
+| Content-Type | 是    | string | 请求体类型 | application/json                        |
+| token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
+
+###### 请求体
+| 参数名         | 是否必填 | 数据类型    | 说明   | 示例                            |
+|-------------|------|---------|------|-------------------------------|
+| id          | 是    | Long    | id   | none                          |
+
+
+##### 响应数据
+###### 响应状态码
+- 200: 删除成功
+- 400: 请求参数错误
+- 403: 权限不足（非管理员）
+- 404: 用户不存在
+- 409: 未满足删除前置条件，无法删除
+- 500: 服务器错误
+
+###### 响应体
+```json
+{
+  "code": 200,
+  "msg": "操作成功",
+  "data":{
+    "id": 11232439947510
+  }
+}
+```
+
+### 商户相关接口 MerchantSupplementController
+
+#### 删除商户接口
+##### 基础信息
+- **接口名称**: 删除商户
+- **接口路径**: `/api/user/merchantSupplement/delete`
+- **请求方法**: DELETE
+- **接口权限**:需要user.delete权限
+- **接口描述**: 只有管理员有权限删除商户,普通商户要注销需要将注销请求发送给管理员
+- **接口实现**:- 在删除账户之前在redis查看上次删除该用户的时间戳如果存在则直接返回, 
+- 否则要须保证该账户的所有订单都已收货, 然后保证所有优惠券已经回收,然后保证优惠券已被退还,然后保证商户的优惠券已被删除, 然后保证所有商品被下架已经删除,
+- 然后将唯一约束字段(都是varchar字段)修改成 "用户ID+DELETED+删除时间戳:原先字段"的格式,然后将merchant_supplement表逻辑删除
+- 然后将用户和商户相关角色的关联逻辑删除
 - 然后在redis添加本次删除的时间戳,然后返回被删除用户的id
 ##### 请求参数
 ###### 请求头
@@ -735,7 +779,7 @@
 - 400: 请求参数错误
 - 403: 权限不足（非管理员）
 - 404: 用户不存在
-- 409: 存在未完成订单，无法删除
+- 409: 未满足删除前置条件，无法删除
 - 500: 服务器错误
 
 ###### 响应体
@@ -749,4 +793,50 @@
 }
 ```
 
-### 商户相关接口 MerchantSupplementController
+#### 通用更新用户信息接口
+##### 基础信息
+- **接口名称**: 更新用户信息
+- **接口路径**: `/api/user/merchantSupplement/customUpdate`
+- **请求方法**: POST
+- **接口权限**: 需要user.update权限或更新者的id等于参数id
+- **接口描述**: 实现了对单个用户的user表,user_detail表,merchant_supplement表的单条或关联字段数据的更新,但更新某些字段需要验证码
+- **接口实现**:
+- 敏感字段需要手机验证码,而敏感字段包括shopLicense和shopLicenseImage,其他字段不需要验证码,
+- 然后updateType包括:LICENSE(需要同时修改shopLicense和shopLicenseImage),SHOP(需要同时修改shopName,shopCategoryId和shopAddress).
+- 根据传入的用户id来查询user,user_detail,merchant_supplement表,然后根据updateType执行对应的更新逻辑,
+- 后台的用户管理模块不提供更新敏感字段的按钮,更新敏感字段的按钮仅对本人开放
+- 对于敏感字段,许可证在数据库没有唯一性约束,所以应该在redis记录上次修改许可证的时间戳,有效期5秒,有效期内禁止修改
+##### 请求参数
+###### 请求头
+| 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
+|--------------|------|--------|-------|-----------------------------------------|
+| Content-Type | 是    | string | 请求体类型 | application/json                        |
+| token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
+
+###### 请求体
+| 参数名              | 是否必填      | 数据类型   | 说明     | 示例            |
+|------------------|-----------|--------|--------|---------------|
+| id               | 是         | Long   | id     | 1             |
+| updateType       | 是         | String | 更新字段类型 | phone         |
+| code             | 否(敏感数据须填) | String | 验证码    | 123456        |
+| phone            | 否         | String | 手机号    | 12345678901   |
+| shopName         | 否         | String | 店铺名称   | 广文书店          |
+| shopCategoryId   | 否         | String | 店铺类别   | 美食            |
+| shopAddress      | 否         | String | 店铺地址   | 汕头达濠西元大盘1010号 |
+| shopLicense      | 否         | String | 营业执照   | xxx           |
+| shopLicenseImage | 否         | String | 营业执照图片 | xxx           |
+
+##### 响应数据
+###### 响应状态码
+- 200: 请求成功
+- 400: 请求参数错误
+- 500: 服务器错误
+
+###### 响应体
+```json
+{
+  "code": 200,
+  "msg": "操作成功",
+  "data":null
+}
+```
