设计了数据库,增加了模块的框架和相应的实体类

--- a/projectTemplate/documents/接口文档.MD
+++ b/projectTemplate/documents/接口文档.MD
@@ -158,7 +158,6 @@
   "data": null
 }
 ```
-
 #### 获取手机验证码接口
 ##### 基础信息
 - **接口名称**: 获取手机验证码
@@ -195,7 +194,6 @@
   "data": null
 }
 ```
-
 #### 获取邮箱验证码接口
 ##### 基础信息
 - **接口名称**: 获取邮箱验证码
@@ -285,7 +283,6 @@
   "data": null
 }
 ```
-
 #### 商户端商户注册接口
 ##### 基础信息
 - **接口名称**: 商户端商户注册
@@ -341,7 +338,6 @@
   "data": null
 }
 ```
-
 #### 根据验证码找回密码接口
 ##### 基础信息
 - **接口名称**: 根据验证码找回密码
@@ -382,9 +378,6 @@
   "data":null
 }
 ```
-
-
-
 ### 用户相关接口 UserController
 #### 分页获取用户列表接口
 ##### 基础信息
@@ -445,7 +438,6 @@
   }
 }
 ```
-
 #### 获取个人用户详细信息接口
 ##### 基础信息
 - **接口名称**: 获取个人用户详细信息
@@ -542,7 +534,52 @@
   }
 }
 ```
+#### 获取个人用户地址簿接口
+##### 基础信息
+- **接口名称**: 获取个人用户地址簿
+- **接口路径**: `/api/user/user/userAddress/{id}`
+- **请求方法**: GET
+- **接口权限**:需要user.list权限或者访问者的id等于参数的id
+- **接口描述**: 查看用户的详细信息
+- **接口实现**: 在用户端个人中心或后台的用户管理可查询用户端地址簿
+##### 请求参数
+###### 请求头
+| 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
+|--------------|------|--------|-------|-----------------------------------------|
+| Content-Type | 是    | string | 请求体类型 | application/json                        |
+| token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
 
+###### 请求体
+| 参数名    | 是否必填 | 数据类型   | 说明  | 示例  |
+|--------|------|--------|-----|-----|
+| id     | 是    | Long   | id  | 1   |
+
+
+##### 响应数据
+###### 响应状态码
+- 200: 请求成功
+- 400: 请求参数错误
+- 500: 服务器错误
+
+###### 响应体
+```json
+{
+  "code": 200,
+  "msg": "操作成功",
+  "data": [
+    {
+      "id": 1,
+      "receiver": "张三",
+      "phone": "15626448742",
+      "province": "广东",
+      "city": "汕头",
+      "district": "濠江",
+      "address": "达濠街道西元大盘1010号",
+      "isDefault": true
+    }
+  ]
+}
+```
 #### 获取自己的认证信息接口
 ##### 基础信息
 - **接口名称**: 获取自己的认证信息
@@ -595,7 +632,6 @@
   }
 }
 ```
-
 #### 添加管理员接口
 ##### 基础信息
 - **接口名称**: 添加用户
@@ -643,7 +679,6 @@
   "data":null
 }
 ```
-
 #### 通用更新用户信息接口
 ##### 基础信息
 - **接口名称**: 更新用户信息
@@ -699,7 +734,6 @@
   "data":null
 }
 ```
-
 #### 删除用户接口
 ##### 基础信息
 - **接口名称**: 删除用户
@@ -745,9 +779,7 @@
   }
 }
 ```
-
 ### 商户相关接口 MerchantSupplementController
-
 #### 删除商户接口
 ##### 基础信息
 - **接口名称**: 删除商户
@@ -792,7 +824,6 @@
   }
 }
 ```
-
 #### 通用更新用户信息接口
 ##### 基础信息
 - **接口名称**: 更新用户信息
