设计了数据库,增加了模块的框架和相应的实体类

--- a/projectTemplate/documents/接口文档.MD
+++ b/projectTemplate/documents/接口文档.MD
@@ -779,7 +779,7 @@
   }
 }
 ```
-### 商户相关接口 MerchantSupplementController
+### 商户补丁相关接口 MerchantSupplementController
 #### 删除商户接口
 ##### 基础信息
 - **接口名称**: 删除商户
@@ -871,3 +871,35 @@
   "data":null
 }
 ```
+
+### 角色相关接口
+
+#### 分页获取角色列表接口
+
+#### 为特点用户分配角色接口
+
+#### 添加角色接口
+
+#### 更新角色接口
+
+#### 删除角色接口
+
+### 权限相关接口
+
+#### 分页获取权限列表接口
+
+#### 为角色分配权限接口
+
+#### 添加权限接口
+
+#### 更改权限内容接口
+
+#### 删除权限接口
+
+## 商品模块 product-service
+
+### 商品相关接口
+
+### 优惠券相关接口
+
+## 订单模块 order-service
