设计了数据库,增加了模块的框架和相应的实体类

--- a/projectTemplate/documents/接口文档v1.0.MD
+++ b/projectTemplate/documents/接口文档v1.0.MD
@@ -1047,7 +1047,7 @@
 }
 ```
 
-#### 更新角色接口
+#### 更新角色内容接口
 ##### 基础信息
 - **接口名称**: 更新角色
 - **接口路径**: `/api/user/role/update`
@@ -1096,6 +1096,7 @@
 - **接口描述**: 只有管理员有权限删除角色,删除角色按钮在角色管理界面
 - **接口实现**:- 删除角色包括根据id将role表的主键等于id,
 - role_permissions表role_id等于id和user_role表role_id等于id的行逻辑删除
+- 只有超级管理员才可以删除角色
 ##### 请求参数
 ###### 请求头
 | 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
@@ -1229,10 +1230,128 @@
 ```
 
 #### 添加权限接口
+##### 基础信息
+- **接口名称**: 添加权限
+- **接口路径**: `/api/user/permissions/add`
+- **请求方法**: POST
+- **接口权限**:需要permissions.add权限
+- **接口描述**: 管理员可以在权限管理界面添加权限
+- **接口实现**: 添加权限
+##### 请求参数
+###### 请求头
+| 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
+|--------------|------|--------|-------|-----------------------------------------|
+| Content-Type | 是    | string | 请求体类型 | application/json                        |
+| token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
+
+###### 请求体
+| 参数名             | 是否必填 | 数据类型    | 说明   | 示例        |
+|-----------------|------|---------|------|-----------|
+| id              | 否    | Integer | id   | null      |
+| name            | 是    | string  | 角色名  | ROLE_USER |
+| permissionValue | 是    | string  | 角色编码 | 1001      |
+| createTime      | 否    | Date    | 创建时间 | null      |
+| updateTime      | 否    | Date    | 修改时间 | null      |
+| deleted         | 否    | boolean | 逻辑删除 | false     |
+
+##### 响应数据
+###### 响应状态码
+- 200: 请求成功
+- 400: 请求参数错误
+- 500: 服务器错误
+
+###### 响应体
+```json
+{
+  "code": 200,
+  "msg": "操作成功",
+  "data": null
+}
+```
 
 #### 更改权限内容接口
+##### 基础信息
+- **接口名称**: 更新权限内容接
+- **接口路径**: `/api/user/permissions/update`
+- **请求方法**: PUT
+- **接口权限**:需要permissions.update权限
+- **接口描述**: 管理员可以在权限管理界面更新权限信息
+- **接口实现**: 更新权限信息,权限被逻辑删除则拒绝更新
+##### 请求参数
+###### 请求头
+| 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
+|--------------|------|--------|-------|-----------------------------------------|
+| Content-Type | 是    | string | 请求体类型 | application/json                        |
+| token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
+
+###### 请求体
+| 参数名             | 是否必填 | 数据类型    | 说明   | 示例        |
+|-----------------|------|---------|------|-----------|
+| id              | 是    | Integer | id   | 1         |
+| name            | 否    | string  | 角色名  | ROLE_USER |
+| permissionValue | 否    | string  | 角色编码 | 1001      |
+| createTime      | 否    | Date    | 创建时间 | null      |
+| updateTime      | 否    | Date    | 修改时间 | null      |
+| deleted         | 否    | boolean | 逻辑删除 | false     |
+
+##### 响应数据
+###### 响应状态码
+- 200: 请求成功
+- 400: 请求参数错误
+- 500: 服务器错误
+
+###### 响应体
+```json
+{
+  "code": 200,
+  "msg": "操作成功",
+  "data": null
+}
+```
 
 #### 删除权限接口
+##### 基础信息
+- **接口名称**: 删除权限
+- **接口路径**: `/api/user/permissions/delete/{id}`
+- **请求方法**: DELETE
+- **接口权限**:需要permissions.delete权限
+- **接口描述**: 只有超级管理员有权限删除权限,删除权限按钮在权限管理界面
+- **接口实现**:- 删除权限包括根据id将permissions表的主键等于id,
+- role_permissions表permissions_id等于id的行逻辑删除
+- 只有超级管理员才可以删除角色
+##### 请求参数
+###### 请求头
+| 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
+|--------------|------|--------|-------|-----------------------------------------|
+| Content-Type | 是    | string | 请求体类型 | application/json                        |
+| token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
+
+###### 请求体
+| 参数名         | 是否必填 | 数据类型    | 说明   | 示例                            |
+|-------------|------|---------|------|-------------------------------|
+| id          | 是    | Long    | id   | none                          |
+
+
+##### 响应数据
+###### 响应状态码
+- 200: 删除成功
+- 400: 请求参数错误
+- 403: 权限不足（非管理员）
+- 404: 用户不存在
+- 409: 未满足删除前置条件，无法删除
+- 500: 服务器错误
+
+###### 响应体
+```json
+{
+  "code": 200,
+  "msg": "操作成功",
+  "data":{
+    "id": 11232439947510
+  }
+}
+```
+
 
 ## 商品模块 product-service
 
