打磨接口文档的用户模块的认证控制器

--- a/projectTemplate/documents/接口文档v1.0.MD
+++ b/projectTemplate/documents/接口文档v1.0.MD
@@ -9,7 +9,7 @@
 - **接口名称**: 用户登录
 - **接口路径**: `/api/user/auth/login`
 - **请求方法**: POST
-- **接口权限**:任何用户可访问
+- **接口权限**:任何用户无需登录可访问
 - **接口描述**: 在前端任何客户端按下登录按钮时触发,可以用用户名/手机/邮箱进行密码登录,
 - 同时可以用手机或邮箱进行验证码登录,通用在用户端,商户端和管理端,
 - 需要标明是用密码还是验证码登录,需要获取用户的IP和设备,
@@ -31,26 +31,24 @@
 | X-Forwarded-For | 否（由代理层传递） | string | 经过代理的客户端 IP 链               | 220.181.38.148, 10.0.0.1                  |
 | X-Local-IP      | 否         | string | 客户端局域网 IP（前端自定义传递）          | 192.168.1.100                             |
 
-###### 请求体
-| 参数名       | 是否必填        | 数据类型   | 说明    | 示例                  |
-|-----------|-------------|--------|-------|---------------------|
-| id        | 否           | Long   | id    | 1984531291470573570 |
-| username  | 绑定loginType | string | 用户名   | admin               |
-| phone     | 绑定loginType | string | 手机号   | 13800000000         |
-| email     | 绑定loginType | string | 邮箱    | 111111111@qq.com    |
-| password  | 绑定loginType | string | 密码    | 123456              |
-| phoneCode | 绑定loginType | string | 手机验证码 | 123456              |
-| emailCode | 绑定loginType | string | 邮箱验证码 | 123456              |
-| loginType | 是           | string | 登录类型  | password            |
-| client    | 是           | string | 客户端信息 | 用户端                 |
-
-
+###### 请求体 UserLoginForm
+```json
+{
+  "id?(Long)": null,
+  "username?(String)": "wdd",
+  "phone?(String)": null,
+  "email?(String)": null,
+  "password?(String)": "123",
+  "phoneCode?(String)": null,
+  "emailCode?(String)": null,
+  "LoginType(String)": "PASSWORD",
+  "client(String)": "USER"
+}
+```
 ##### 响应数据
 ###### 响应状态码
 - 200: 请求成功
-- 400: 请求参数错误
-- 401: 用户名或密码错误
-- 500: 服务器错误
+- else: 异常
 
 ###### 响应体
 ```json
@@ -58,7 +56,7 @@
   "code": 200,
   "message": "操作成功",
   "data": {
-    "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+    "token(String)": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
   }
 }
 ```
@@ -68,57 +66,39 @@
 - **接口名称**: 密码登录
 - **接口路径**: `/api/user/auth/passwordSecurityGetter/{username}`
 - **请求方法**: GET
-- **接口权限**:任何用户可访问,但不能通过网关访问
-- **接口描述**: 在用户登录接口触发时如果登录类型为password则触发,
-- 参数username指代用户名/手机/邮箱,可以用用户名/手机/邮箱获取用户信息,
-- 如果用户被封禁或被删除则直接返回错误信息,
-- 得到用户信息后返回UserDetail对象
-- **接口实现**:PasswordUserDetailServiceImpl调用该接口,调用数据库得到用户基本信息来得到密码,先从redis得到用户信息,
-- 拿不到就去mysql拿. 包装到UserDetail的实现类SecurityUser并返回
+- **接口权限**:任何用户无需登录可访问,但不能通过网关访问
+- **接口描述**: 在用户登录接口触发时如果登录类型为password则触发, 得到用户密码和用户信息
+- **接口实现**:PasswordUserDetailServiceImpl调用该接口,在username这个参数进行正则表达式校验,判断是用户名/手机/邮箱,
+- 然后用username参数查找数据库得到用户基本信息User来得到密码,然后先从redis得到用户信息currentUserVO,
+- 拿不到就去mysql继续得到用户信息currentUserVO. 将数据包装到PasswordSecurityGetterVO并返回如果用户被封禁或被删除则直接返回错误信息
 ##### 请求参数
 ###### 请求头
 | 参数名             | 是否必填      | 数据类型   | 说明                          | 示例                                        |
 |-----------------|-----------|--------|-----------------------------|-------------------------------------------|
 | Content-Type    | 是         | string | 请求体类型                       | application/json                          |
 
-###### 请求体
-| 参数名       | 是否必填 | 数据类型   | 说明    | 示例                  |
-|-----------|------|--------|-------|---------------------|
-| username  | 是    | string | 用户名   | admin               |
-
 
 ##### 响应数据
 ###### 响应状态码
 - 200: 请求成功
-- 400: 请求参数错误
-- 401: 用户名或密码错误
-- 500: 服务器错误
-- 
-###### 响应体
+- else: 异常
+
+###### 响应体 PasswordSecurityGetterVO
 ```json
 {
   "code": 200,
   "msg": "操作成功",
   "data": {
-    "loginUserForm": {
-      "id": 1,
-      "username": "wddyxd",
-      "password": "202cb962ac59075b964b07152d234b70",
-      "phone": "15626448742",
-      "phoneCode": null,
-      "email": "www778005729@qq.com",
-      "emailCode": null,
-      "loginType": null
-    },
-    "currentUserInfo": {
-      "id": 1,
-      "username": "wddyxd",
-      "nickName": "wddyxd",
-      "avatar": "",
-      "roles": [
+    "phoneCode(String)": "123456",
+    "currentUserDTO(CurrentUserDTO)": {
+      "id(Long)": 1,
+      "username(String)": "wddyxd",
+      "nickName(String)": "wddyxd",
+      "avatar(String)": "",
+      "roles(List<String>)": [
         "ROLE_SUPER_ADMIN"
       ],
-      "permissionValueList": [
+      "permissionValueList(List<String>)": [
         "user.add",
         "user.update",
         "user.list",
@@ -134,57 +114,40 @@
 - **接口名称**: 手机验证码登录
 - **接口路径**: `/api/user/auth/phoneCodeSecurityGetter/{phone}`
 - **请求方法**: GET
-- **接口权限**:任何用户可访问,但不能通过网关访问
-- **接口描述**: 在用户登录接口触发时如果登录类型为phoneCode则触发,
-- 参数phone指代手机,可以用手机获取用户信息和手机验证码,
-- 如果用户被封禁或被删除则直接返回错误信息,
-- 得到用户信息后返回UserDetail对象
-- **接口实现**:PhoneCodeUserDetailServiceImpl调用该接口,调用数据库得到用户基本信息,先从redis得到用户信息,
-- 拿不到就去mysql拿.最后从redis获取手机验证码,对获得的密码进行脱敏处理,包装到UserDetail的实现类SecurityUser并返回
+- **接口权限**:任何用户无需登录可访问,但不能通过网关访问
+- **接口描述**: 在用户登录接口触发时如果登录类型为phoneCode则触发, 得到手机验证码和用户信息
+- **接口实现**:        PhoneCodeUserDetailServiceImpl调用该接口,
+  - 然后根据手机号查找数据库得到用户基本信息User来判断用户是否存在和正常使用,然后先从redis得到用户信息currentUserVO和用户的手机验证码,
+  - 拿不到用户信息就去mysql继续得到用户信息CurrentUserVO,但拿不到手机验证码就返回错误. 将数据包装到PhoneCodeSecurityGetterVO并返回
+  - 如果用户被封禁或被删除则直接返回错误信息
 ##### 请求参数
 ###### 请求头
 | 参数名             | 是否必填      | 数据类型   | 说明                          | 示例                                        |
 |-----------------|-----------|--------|-----------------------------|-------------------------------------------|
 | Content-Type    | 是         | string | 请求体类型                       | application/json                          |
 
-###### 请求体
-| 参数名   | 是否必填 | 数据类型   | 说明    | 示例          |
-|-------|------|--------|-------|-------------|
-| phone | 是    | string | 用户名   | 13800000001 |
-
 
 ##### 响应数据
 ###### 响应状态码
 - 200: 请求成功
-- 400: 请求参数错误
-- 401: 用户名或密码错误
-- 500: 服务器错误
+- else: 异常
 -
-###### 响应体
+###### 响应体 PhoneCodeSecurityGetterVO
 ```json
 {
   "code": 200,
   "msg": "操作成功",
   "data": {
-    "loginUserForm": {
-      "id": 1,
-      "username": "wddyxd",
-      "password": "202cb9*************234b70",
-      "phone": "15626448742",
-      "phoneCode": 123456,
-      "email": "www778005729@qq.com",
-      "emailCode": null,
-      "loginType": null
-    },
-    "currentUserInfo": {
-      "id": 1,
-      "username": "wddyxd",
-      "nickName": "wddyxd",
-      "avatar": "",
-      "roles": [
+    "phoneCode(String)": "123456",
+    "currentUserDTO(CurrentUserDTO)": {
+      "id(Long)": 1,
+      "username(String)": "wddyxd",
+      "nickName(String)": "wddyxd",
+      "avatar(String)": "",
+      "roles(List<String>)": [
         "ROLE_SUPER_ADMIN"
       ],
-      "permissionValueList": [
+      "permissionValueList(List<String>)": [
         "user.add",
         "user.update",
         "user.list",
@@ -197,60 +160,43 @@
 
 #### 用户登录接口的邮箱验证码登录接口
 ##### 基础信息
-- **接口名称**: 手机验证码登录
+- **接口名称**: 邮箱验证码登录
 - **接口路径**: `/api/user/auth/emailCodeSecurityGetter/{phone}`
 - **请求方法**: GET
-- **接口权限**:任何用户可访问,但不能通过网关访问
-- **接口描述**: 在用户登录接口触发时如果登录类型为emailCode则触发,
-- 参数email指代邮箱,可以用邮箱获取用户信息和邮箱验证码,
-- 如果用户被封禁或被删除则直接返回错误信息,
-- 得到用户信息后返回UserDetail对象
-- **接口实现**:EmailCodeUserDetailServiceImpl调用该接口,调用数据库得到用户基本信息,先从redis得到用户信息,
-- 拿不到就去mysql拿.最后从redis获取邮箱验证码,对获得的密码进行脱敏处理,包装到UserDetail的实现类SecurityUser并返回
+- **接口权限**:任何用户无需登录可访问,但不能通过网关访问
+- **接口描述**: 在用户登录接口触发时如果登录类型为emailCode则触发, 得到邮箱验证码和用户信息
+- **接口实现**:        EmailCodeUserDetailServiceImpl调用该接口,
+  - 然后根据邮箱查找数据库得到用户基本信息User来判断用户是否存在和正常使用,然后先从redis得到用户信息currentUserVO和用户的邮箱验证码,
+  - 拿不到用户信息就去mysql继续得到用户信息CurrentUserVO,但拿不到邮箱验证码就返回错误. 将数据包装到EmailCodeSecurityGetterVO并返回
+  如果用户被封禁或被删除则直接返回错误信息
 ##### 请求参数
 ###### 请求头
 | 参数名             | 是否必填      | 数据类型   | 说明                          | 示例                                        |
 |-----------------|-----------|--------|-----------------------------|-------------------------------------------|
 | Content-Type    | 是         | string | 请求体类型                       | application/json                          |
 
-###### 请求体
-| 参数名   | 是否必填 | 数据类型   | 说明    | 示例                       |
-|-------|------|--------|-------|--------------------------|
-| email | 是    | string | 用户名   | www778005729@outlook.com |
-
 
 ##### 响应数据
 ###### 响应状态码
 - 200: 请求成功
-- 400: 请求参数错误
-- 401: 用户名或密码错误
-- 500: 服务器错误
+- else: 异常
 -
-###### 响应体
+###### 响应体(EmailCodeSecurityGetterVO)
 ```json
 {
   "code": 200,
   "msg": "操作成功",
   "data": {
-    "loginUserForm": {
-      "id": 1,
-      "username": "wddyxd",
-      "password": "202cb9*************234b70",
-      "phone": "15626448742",
-      "phoneCode": null,
-      "email": "www778005729@qq.com",
-      "emailCode": 123456,
-      "loginType": null
-    },
-    "currentUserInfo": {
-      "id": 1,
-      "username": "wddyxd",
-      "nickName": "wddyxd",
-      "avatar": "",
-      "roles": [
+    "phoneCode(String)": "123456",
+    "currentUserDTO(CurrentUserDTO)": {
+      "id(Long)": 1,
+      "username(String)": "wddyxd",
+      "nickName(String)": "wddyxd",
+      "avatar(String)": "",
+      "roles(List<String>)": [
         "ROLE_SUPER_ADMIN"
       ],
-      "permissionValueList": [
+      "permissionValueList(List<String>)": [
         "user.add",
         "user.update",
         "user.list",
@@ -263,7 +209,7 @@
 
 #### 用户登出接口
 ##### 基础信息
-- **接口名称**: 用户登录
+- **接口名称**: 用户登出
 - **接口路径**: `/api/user/auth/logout`
 - **请求方法**: POST
 - **接口权限**:任何已登录用户可访问
@@ -276,16 +222,11 @@
 | Content-Type | 是    | string | 请求体类型 | application/json                        |
 | token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
 
-###### 请求体
-| 参数名  | 是否必填 | 数据类型 | 说明   | 示例   |
-|------|------|------|------|------|
-| null | null | null | null | null |
-
 
 ##### 响应数据
 ###### 响应状态码
 - 200: 请求成功
-- 500: 服务器错误
+- else: 异常
 
 ###### 响应体
 ```json
@@ -299,30 +240,26 @@
 #### 获取手机验证码接口
 ##### 基础信息
 - **接口名称**: 获取手机验证码
-- **接口路径**: `/api/user/auth/phoneCode`
-- **请求方法**: POST
-- **接口权限**:任何用户可访问
-- **接口描述**: 获取手机验证码接口,前端设置用户60秒访问一次
-- **接口实现**:- 获取手机号,判断合法性后发送手机验证码,同时要根据手机号对接口进行基于 Redis 的计数器限流,
-- 可以用短信服务商 API 将验证码发送给用户,但这里简化为后端生成并打印随机验证码,
-- 同一手机号在验证码有效期内重复请求，可直接返回成功(幂等性问题),
-- 验证码保存在redis中,过期时间为5分钟
+- **接口路径**: `/api/user/auth/phoneCode/{phone}`
+- **请求方法**: GET
+- **接口权限**:任何用户无需登录可访问
+- **接口描述**: 获取手机验证码接口,在手机登录,修改个人信息时调用
+- **接口实现**:        前端设置用户60秒访问一次该接口,
+- 获取手机号,判断合法性后发送手机验证码,同时要根据手机号对接口进行基于 Redis 的计数器限流和sentinel限流,
+- 可以用短信服务商 API 将验证码发送给用户,但这里暂时简化为后端生成并打印随机验证码,
+- 在redis查询到手机号的访问信息则直接返回提示,
+- 验证码保存在redis中,过期时间为15分钟,然后在redis记录该手机号的访问信息,过期时间为60秒,返回空值
 ##### 请求参数
 ###### 请求头
 | 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
 |--------------|------|--------|-------|-----------------------------------------|
 | Content-Type | 是    | string | 请求体类型 | application/json                        |
 
-###### 请求体
-| 参数名              | 是否必填                    | 数据类型   | 说明       | 示例                   |
-|------------------|-------------------------|--------|----------|----------------------|
-| phone            | 是                       | string | 手机号      | 15626448742          |
 
 ##### 响应数据
 ###### 响应状态码
 - 200: 请求成功
-- 400: 请求参数错误
-- 500: 服务器错误
+- else: 异常
 
 ###### 响应体
 ```json
@@ -338,28 +275,24 @@
 - **接口名称**: 获取邮箱验证码
 - **接口路径**: `/api/user/auth/emailCode`
 - **请求方法**: POST
-- **接口权限**:任何用户可访问
-- **接口描述**: 获取邮箱验证码接口,前端设置用户60秒访问一次
-- **接口实现**:- 获取邮箱,判断合法性后发送邮箱验证码,同时要根据邮箱对接口进行基于 Redis 的计数器限流,
+- **接口权限**:任何用户无需登录可访问
+- **接口描述**: 获取邮箱验证码接口,在邮箱登录,修改个人信息时调用
+- **接口实现**:-         前端设置用户60秒访问一次该接口,
+- 获取邮箱,判断合法性后发送邮箱验证码,同时要根据邮箱对接口进行基于 Redis 的计数器限流和sentinel限流,
 - 可以用第三方邮箱服务商将验证码发送给用户,但这里简化为编写邮箱发送工具类,根据SMTP协议发送验证码,
-- 同一邮箱在验证码有效期内重复请求，可直接返回成功(幂等性问题),
-- 验证码保存在redis中,过期时间为5分钟
+- 在redis查询到邮箱的访问信息则直接返回提示,
+- 验证码保存在redis中,过期时间为15分钟,然后在redis记录该邮箱的访问信息,过期时间为60秒,返回空值
 ##### 请求参数
 ###### 请求头
 | 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
 |--------------|------|--------|-------|-----------------------------------------|
 | Content-Type | 是    | string | 请求体类型 | application/json                        |
 
-###### 请求体
-| 参数名   | 是否必填 | 数据类型   | 说明 | 示例                 |
-|-------|------|--------|----|--------------------|
-| email | 是    | string | 邮箱 | 15626448742@qq.com |
 
 ##### 响应数据
 ###### 响应状态码
 - 200: 请求成功
-- 400: 请求参数错误
-- 500: 服务器错误
+- else: 异常
 
 ###### 响应体
 ```json
@@ -381,11 +314,8 @@
 - **接口名称**: 用户注册
 - **接口路径**: `/api/user/auth/customUserRegister`
 - **请求方法**: POST
-- **接口权限**:任何用户可访问
-- **接口描述**: 用户端的注册接口,
-- 需要判断用户名,手机号或邮箱是否已存在,如果都为null则注册成功,
-- 然后分配ROLE_NEW_USER角色,创建user表,关联user_role表,创建user_detail表,
-- 否则返回错误
+- **接口权限**:任何用户无需登录可访问
+- **接口描述**: 用户端的注册接口
 - **接口实现**:得到参数后分别根据用户名,手机号和邮箱获取user表的一条数据,
 - 如果三份数据都是null则注册用户,分配ROLE_NEW_USER角色,创建user表,关联user_role表,创建user_detail表并填充默认数据
 - 其他情况返回错误
@@ -396,24 +326,22 @@
 |--------------|------|--------|-------|-----------------------------------------|
 | Content-Type | 是    | string | 请求体类型 | application/json                        |
 
-###### 请求体
-| 参数名              | 是否必填                    | 数据类型   | 说明       | 示例                   |
-|------------------|-------------------------|--------|----------|----------------------|
-| username         | 是                       | string | 用户名      | wddyxd               |
-| phone            | 是                       | string | 手机号      | 15626448742          |
-| phoneCode        | 是                       | string | 手机验证码    | 123456               |
-| email            | 是                       | string | 邮箱       | 15626448742@qq.com   |
-| emailCode        | 是                       | string | 邮箱验证码    | 123456               |
-| password         | 是                       | string | 密码       | 123456               |
+###### 请求体 (CustomUserRegisterDTO)
+```json
+{
+  "username(String)": "wdd",
+  "phone(String)": "13800000001",
+  "phoneCode(String)": "123456",
+  "email(String)": "xxxx@qq.com",
+  "emailCode(String)": "123456",
+  "password(String)": "123456"
+}
+```
 
 ##### 响应数据
 ###### 响应状态码
 - 200: 请求成功
-- 400: 请求参数错误
-- 40?: 用户已存在
-- 40?: 手机验证码错误
-- 40?: 邮箱验证码错误
-- 500: 服务器错误
+- else: 异常
 
 ###### 响应体
 ```json
@@ -429,8 +357,8 @@
 - **接口名称**: 商户端商户注册
 - **接口路径**: `/api/user/auth/merchantRegister`
 - **请求方法**: POST
-- **接口权限**:任何用户可访问
-- **接口描述**: 商户端的注册接口,
+- **接口权限**:任何用户无需登录可访问
+- **接口描述**: 商户端的注册接口
 - **接口实现**:得到参数后分别根据用户名,手机号和邮箱获取user表的一条数据,
 - 如果三份数据都是null则调用用户端注册接口
 - 如果三份数据都指向同一个用户而且没有被分配商户相关角色则将该用户分配ROLE_NEW_MERCHANT角色,
@@ -443,31 +371,27 @@
 |--------------|------|--------|-------|-----------------------------------------|
 | Content-Type | 是    | string | 请求体类型 | application/json                        |
 
-###### 请求体
-| 参数名              | 是否必填 | 数据类型    | 说明       | 示例                   |
-|------------------|------|---------|----------|----------------------|
-| username         | 是    | string  | 用户名      | wddyxd               |
-| phone            | 是    | string  | 手机号      | 15626448742          |
-| phoneCode        | 是    | string  | 手机验证码    | 123456               |
-| email            | 是    | string  | 邮箱       | 15626448742@qq.com   |
-| emailCode        | 是    | string  | 邮箱验证码    | 123456               |
-| password         | 是    | string  | 密码       | 123456               |
-| shopName         | 是    | string  | 商户名      | 广文书店                 |
-| shopCategoryId   | 是    | Integer | 商户类别id   | 1                    |
-| shopAddress      | 是    | string  | 商户地址     | 广东汕头濠江区达濠街道西元大盘1010号 |
-| shopLicense      | 是    | string  | 商户营业执照   | 123456               |
-| shopLicenseImage | 是    | string  | 商户营业执照图片 | 123456               |
-
-
+###### 请求体 (MerchantRegisterDTO)
+```json
+{
+  "username(String)": "wdd",
+  "phone(String)": "13800000001",
+  "phoneCode(String)": "123456",
+  "email(String)": "xxxx@qq.com",
+  "emailCode(String)": "123456",
+  "password(String)": "123456",
+  "shopName(String)": "shopName",
+  "shopCategoryId(Long)": 1,
+  "shopAddress(String)": "shopAddress",
+  "shopLicense(String)": "shopLicense",
+  "shopLicenseImage(String)": "shopLicenseImage"
+}
+```
 
 ##### 响应数据
 ###### 响应状态码
 - 200: 请求成功
-- 400: 请求参数错误
-- 40?: 用户已存在
-- 40?: 手机验证码错误
-- 40?: 邮箱验证码错误
-- 500: 服务器错误
+- else: 异常
 
 ###### 响应体
 ```json
@@ -481,11 +405,11 @@
 #### 根据验证码找回密码接口
 ##### 基础信息
 - **接口名称**: 根据验证码找回密码
-- **接口路径**: `/api/user/auth/updatePasswordByCode`
+- **接口路径**: `/api/user/auth/rebuildPassword`
 - **请求方法**: POST
-- **接口权限**: 任何用户可访问
-- **接口描述**: 支持根据手机验证码或邮箱验证码为账号找回密码
-- **接口实现**: 如果type=phoneCode则需要手机和验证码和新密码,后端会判断手机和验证码是否合法且吻合.
+- **接口权限**: 任何用户无需登录可访问
+- **接口描述**: 支持根据手机验证码为账号找回密码
+- **接口实现**: 需要手机和验证码和新密码,后端会判断手机和验证码是否合法且吻合.
 - 成功更改密码后时redis存储5秒过期的时间戳,过期时间内不能重新更改密码,更改密码后强制在redis的当前用户的token删除
 
 ##### 请求参数
@@ -494,21 +418,19 @@
 |--------------|------|--------|-------|-----------------------------------------|
 | Content-Type | 是    | string | 请求体类型 | application/json                        |
 
-###### 请求体
-| 参数名         | 是否必填 | 数据类型   | 说明    | 示例                  |
-|-------------|------|--------|-------|---------------------|
-| type        | 是    | String | 验证码类型 | phoneCode/emailCode |
-| phone       | 否    | String | 手机号   | 15626448742         |
-| email       | 否    | String | 邮箱    | 15626448742@qq.com  |
-| phoneCode   | 否    | String | 手机验证码 | 123456              |
-| emailCode   | 否    | String | 邮箱验证码 | 123456              |
-| newPassword | 是    | String | 密码    | 123456              |
+###### 请求体 (RebuildPasswordDTO)
+```json
+{
+  "phone(String)":"13800000001",
+  "phoneCode(String)": "123456",
+  "newPassword(String)": "123456"
+}
+```
 
 ##### 响应数据
 ###### 响应状态码
 - 200: 请求成功
-- 400: 请求参数错误
-- 500: 服务器错误
+- else: 异常
 
 ###### 响应体
 ```json
@@ -1285,6 +1207,10 @@
   "data":null
 }
 ```
+
+#### 封禁用户接口
+
+#### 解封用户接口
 
 #### 删除用户接口
 ##### 基础信息
@@ -3454,7 +3380,6 @@
 }
 ```
 
-
 ## 订单模块 order-service
 
 ### 订单相关接口 OrderMainController
@@ -3940,7 +3865,8 @@
 - **请求方法**: POST
 - **接口权限**:需要orderStatusLog.add权限
 - **接口描述**: 用户支付订单
-- **接口实现**: 检查订单是否处于 "待支付" 状态,直接生成order_status_log表,后续接入支付服务器,然后调用修改订单接口,解决幂等性问题
+- **接口实现**: 检查订单是否处于 "待支付" 状态,直接生成order_status_log表,
+- 后续接入支付服务器,然后调用修改订单接口,解决幂等性问题,调用新增财务接口
 ##### 请求参数
 ###### 请求头
 | 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
